Button styling // Stopped two collapses starting open when only one allowed open usually

--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -23,7 +23,7 @@
 
 #navbar-logo {
     max-width: 50px;
-    background-color: #fff2e6;
+    /*background-color: #fff2e6;*/
 }
 
 #basic-addon1 {
@@ -80,4 +80,13 @@ body {
 
 #btnUpdate {
     width: 100%;
+    background-color: #ffaa80;
+    color: #333;
+    border-color: #7A1211;
+    border-radius: 4px;
+    border-width: 2px;
+}
+
+#accordion {
+    margin-bottom: 5px;
 }
